--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,8 @@
 @import "tailwindcss";
 
+.rakkas-regular {
+    font-family: "Rakkas", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
